--- a/app/src/main/res/layout/activity_music.xml
+++ b/app/src/main/res/layout/activity_music.xml
@@ -1,9 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    >
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/imageView_musicActivity"
+        />
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="bottom"
+    android:id="@+id/linear_musicActivity"
     tools:context=".MusicActivity">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/musicName"
+            android:textSize="24sp"
+            android:gravity="center"
+            android:text="歌曲名称"
+            />
+        <SeekBar
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:id="@+id/seekBar"
+            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/startTime"
+                android:text="123"
+                android:layout_weight="1"
+                android:layout_marginStart="5dp"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/endTime"
+                android:text="123"
+                android:layout_weight="1"
+                android:gravity="end"
+                android:layout_marginEnd="5dp"
+                />
+        </LinearLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+            <Button
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:id="@+id/previouBtn"
+                android:layout_weight="1"
+                android:background="@drawable/ic_baseline_skip_previous_24"
+                android:layout_alignParentLeft="true"
+                android:layout_marginStart="20dp"
+                />
+            <Button
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:id="@+id/palyBtn"
+                android:layout_centerInParent="true"
+                android:background="@drawable/ic_baseline_play_arrow_24"
+                />
+            <Button
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:id="@+id/pauseBtn"
+                android:layout_centerInParent="true"
+                android:visibility="gone"
+                android:background="@drawable/ic_baseline_pause_24"
+                />
+            <Button
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:id="@+id/nextBtn"
+                android:background="@drawable/ic_baseline_skip_next_24"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="20dp"
+                />
+        </RelativeLayout>
+</LinearLayout>
+</FrameLayout>
