--- a/app/src/main/res/layout/activity_music.xml
+++ b/app/src/main/res/layout/activity_music.xml
@@ -8,6 +8,8 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:alpha="0.8"
         android:id="@+id/imageView_musicActivity"
         />
 <LinearLayout
